# twm

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yaml  checks.yaml  lint.yaml
doc/: CONFIGURATION.md
src/: cli.rs  config.rs  handler.rs  layout.rs  lib.rs  main.rs  matches.rs  picker.rs  tmux.rs  workspace.rs  workspace_conditions.rs
src/ui/: event.rs  mod.rs  picker.rs  tui.rs
