[package]
name = "twm"
description = "A customizable workspace manager for tmux"
version = "0.9.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vinnymeller/twm"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["cargo", "derive"] }
config = "0.13"
serde = { version = "1", features = ["derive"] }
libc = "0.2"
indexmap = "1.9"
shellexpand = "3"
walkdir = "2"
xdg = "2.4"
enum_dispatch = "0.3.13"
crossterm = { version = "0.27.0", features = ["event-stream"] }
nucleo = "0.5.0"
ratatui = "0.26.3"
serde_json = "1.0.117"
schemars = "0.8.21"
clap_complete = "4.5.2"
