[package]
name = "twm"
description = "A customizable workspace manager for tmux"
version = "0.10.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vinnymeller/twm"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["cargo", "derive"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
config = "0.13"
crossterm = "0.27.0"
enum_dispatch = "0.3.13"
jwalk = "0.8.1"
libc = "0.2"
nucleo = "0.5.0"
ratatui = "0.26.3"
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3"
xdg = "2.4"
