cargo-features = ["edition2024"]
[package]
name = "twm"
description = "A customizable workspace manager for tmux"
version = "0.11.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vinnymeller/twm"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["cargo", "derive"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
config = "0.15"
crossterm = "0.28.1"
enum_dispatch = "0.3.13"
jwalk = "0.8.1"
libc = "0.2"
nucleo = "0.5.0"
ratatui = "0.29.0"
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
shellexpand = "3"
xdg = "2.4"

[dev-dependencies]
serial_test = "3"
